tests/fixtures/invalid/str_sub_int.py
# Cannot subtract Str and Int
x: str = "hello" - 1
